  pending invalidations for these oids which will cause the object to
  be invalidated. There have been issues with ZEO persistent cache
  management that have caused out of date data to remain in the cache.
  (It's possible that the last of these were addressed in the
  3.10.0b5.) Invalidating read data when there is a conflict error
  provides some extra insurance.


3.10.0b5 (2010-09-02)
=====================

Bugs fixed
----------

- Added a new API that allows applications to make sure that current
  data are read. For example, with::

    self._p_jar.readCurrent(ob)

  A conflict error will be raised if the version of ob read by the
  transaction isn't current when the transaction is committed.

  Normally, ZODB only assures that objects read are consistent, but not
  necessarily up to date.  Checking whether an object is up to date is
  important when information read from one object is used to update
  another.

  BTrees are an important case of reading one object to update
  another.  Internal nodes are read to decide which leave notes are
  updated when a BTree is updated.  BTrees now use this new API to
  make sure that internal nodes are up to date on updates.

- Shutting down a process while committing a transaction could cause
  ZEO client caches to have invalid data.  This, in turn caused stale
  data to remain in the cache until it was updated.

- Removed untested unsupported dbmstorage fossile.

3.10.0b4 (2010-07-19)
=====================

Bugs fixed
----------

- When an integer too large to fit in a 32-bit integer was provided as
  a 32-bit-integer BTree key or value on 64-bit machines, an
  OverflowError was raised. Now a TypeError is raised.

3.10.0b3 (2010-07-15)
=====================

Bugs fixed
----------

- A change in 3.10.0b2:

  "DemoStorages didn't close their changes databases when they were
   created temporarily (not passed to the constructor)."

  Introduced a backward-compatibility problem for some applications.
